[HT-829] Moved image gallery from view to a field. Fixed some styles so images go full width correctly on mobile as fixed the padding between elements. Fixed the flow of following elements using clarify.

--- a/healthgovau-theme/sass/components/_imagegallery.scss
+++ b/healthgovau-theme/sass/components/_imagegallery.scss
@@ -1,37 +1,34 @@
 .image-gallery {
-  ul {
-        list-style: none;
-        padding: 0;
-        margin: 0 -12px;
-      li {
-            width: 100%;
-            float: left;
-            box-sizing: border-box;
-            position: relative;
-            min-height: 1px;
-            padding-left: 12px;
-            padding-right: 12px;
-            margin-bottom: 1em;
-                @include media($tablet) {
-                    width: 30%;
-                }
-                @include media($desktop) {
-                    width: 25%;
-                }
-          a{
-              border-bottom: none;
-              img{
-                  height: auto;
-                  display: block;
-                  margin: 0 auto;
-                  @include media($tablet) {
-                    margin: 0;             
-                  }
-                  @include media($desktop) {
-                    display: inline-block;
-                  }
-              }
-          }
+  @include clearfix;
+  .field-item {
+    line-height: 0;
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
+    position: relative;
+    min-height: 1px;
+    margin-bottom: 1em;
+    @include media($tablet) {
+      width: 30%;
+      padding-right: 1em;
+    }
+    @include media($desktop) {
+      width: 25%;
+    }
+    a {
+      border-bottom: none;
+      img {
+        width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+        @include media($tablet) {
+          margin: 0;
+        }
+        @include media($desktop) {
+          display: inline-block;
+        }
       }
-   }
+    }
+  }
 }
